--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 
 <html>
 
@@ -8,6 +7,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>MyBookList</h1>
+	<div class="form-group" >
+		<label>Title</label>
+		<input type="text" id="title">
+		<label>Author</label>
+		<input type="text" id="author">
+		<label>ISBN#</label>
+		<input type="text" id="isbn">
+		<button id="submit" onclick="addBook()">Add Book</button>
+	</div>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Author</th>
+				<th>ISBN#</th>
+			</tr>
+		</thead>
+		<tbody id="book-list" ></tbody>
+		</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
